# Monitor

ESP32_Serial/: ESP32_Serial.ino
Json/: CMakeLists.txt  CMakeLists.txt.user.1732a55  main.cpp  read.cpp
Monitor/: CMakeLists.txt  CMakeLists.txt.user.1732a55  CMakeLists.txt.user.199dc41  ICON.rc  Monitor_Resource.qrc  chartitem.cpp  chartitem.h  filterdialog.cpp  filterdialog.h  filterdialog.ui  main.cpp  material-blue.qss  monitor.cpp  monitor.h  monitor.ui  monitor.ui.autosave  observerdialog.cpp  observerdialog.h  observerdialog.ui  observeritem.cpp  observeritem.h  settingsdialog.cpp  settingsdialog.ui  ui_monitor.h
Monitor/Forms/: monitor.ui
UdpServer/: CMakeLists.txt  udpserver.cpp  udpserver.h
build-Monitor-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake  material-blue.qss  settings.json
build-Monitor-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Monitor-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Monitor_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-Monitor-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/rawdata/: raw-2022-07-12-13-54-26.csv  raw-2022-07-12-13-59-39.csv  raw-2022-07-12-14-03-15.csv  raw-2022-07-12-14-08-59.csv  raw-2022-07-13-09-29-34.csv  raw-2022-07-13-09-46-18.csv  raw-2022-07-13-09-47-13.csv  raw-2022-07-13-09-48-06.csv  raw-2022-07-13-09-53-15.csv  raw-2022-07-13-09-53-49.csv  (+4 more)
filter_fir/: CMakeLists.txt  CMakeLists.txt.user.199dc41  filter_fir.cpp  filter_fir.h  filter_fir_global.h
(+745 files in other folders)
